# chat-gemma2-jpn

./: .gitattributes  compose.yaml  readme.md  sample-chat.ipynb  sample.ipynb
api-aivisspeech/: dockerfile  readme.md
api-gemma2/: .dockerignore  .env  .env.public  .gitignore  clone_model.sh  dockerfile  pyproject.toml  readme-english.md  readme.md
api-gemma2/src/: download.py  main.py  test.ipynb
app-chainlit/: .gitignore  dockerfile  pyproject.toml
app-chainlit/src/: app.py  chainlit.md
app-next/: dockerfile  package-lock.json  package.json
app-next/src/app/: layout.tsx  page.tsx
app-next/src/components/: Header.tsx  ThemeSwitch.tsx
app-next/src/hooks/: useTheme.ts
app-next/src/styles/: global.css
etc/sample/: readme.md
proxy-nginx/: dockerfile  nginx.conf
sample/: readme.md  sample-aivisspeech.ipynb  sample-chat.ipynb  sample.ipynb
