[project]
name = "api-gemma2"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.31.1",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api_gemma2"]
